# dnscrypt-plugin-masquerade

./: CMakeLists.txt  LICENSE  README.md  hosts.mask  masquerade.c
